--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     background-color: red;
     height: 120px;
     padding-top: 0.5px;
-    margin: 50px;
+    margin: 20px;
 }
 .pt2 {
     color: yellow;
@@ -26,15 +26,17 @@ body {
 }
 
 .searching-box {
-    background-color: aqua;
-    height: 80px;
-    margin: 50px;
+    height: 50px;
+    margin: 20px;
+    padding-top: 20px;
+    color: white
 }
 
 .card-list {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    color: white;
 }
 
 .card {
